--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,7 @@ All colors MUST be HSL.
   background-position: center;
 }
 .taxicar {
-  background-image: url("../public/[CITYPNG.COM]Taxi\ Car\ Cab\ Vehicle\ Auto\ PNG\ Image\ -\ 1500x1500.png");
+  background-image: url("https://i.ibb.co/v6h8ZbC6/CITYPNG-COM-Taxi-Car-Cab-Vehicle-Auto-PNG-Image-1500x1500.png");
   background-size: 120%;
   width: 700px;
   height: 600px;
